infra/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phynd-crm
  labels:
    app.kubernetes.io/part-of: madfam-platform
    enclii.dev/data-access: "true"
    enclii.dev/redis-consumer: "true"
    enclii.dev/type: application
