infra/k8s/production/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phyne-crm-web
  namespace: phyne-crm
spec:
  selector:
    app: phyne-crm-web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
